--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "gameoflife",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "game-of-life.js",
   "scripts": {
-    "build": "tsc & browserify ./src/GameOfLife.js --s GameOfLife -o ./src/bundle.js"
+    "build": "tsc & browserify ./dist/game-of-life.js --s GameOfLife -o ./dist/bundle.js",
+    "test": "tsc &  mocha --timeout=5000 ./dist/**/*.test.js",
+    "cc" : "tsc & nyc --reporter=text mocha --timeout=5000 ./dist/**/*.test.js"
   },
   "devDependencies": {
     "browserfy": "^1.0.0",
-    "browserify": "^14.5.0"
+    "browserify": "^14.5.0",
+    "nyc": "^11.4.1"
   },
   "dependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.1.3",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "sinon": "^4.2.2",
+    "ts-mockito": "^2.2.9",
     "uniq": "^1.0.1",
     "webpack": "^3.8.1"
   }
