--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
+sudo: false
 node_js:
-  - "lts/*"
+  - "4.1"
+  - "4.0"
+install:
+  - npm install
+script:
+  - npm run build
+  - npm test
