--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 sudo: false
 node_js:
-  - "4.1"
-  - "4.0"
+  - "lts/*"
 install:
   - npm install
   - npm install typescript -g
+  - npm install browserify -g
 script:
   - npm run build
   - npm test
